--- a/teste_experiment2.ipynb
+++ b/teste_experiment2.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "329.1622 \tWARNING \tt of last frame was 2.45ms (=1/408)\n",
+      "329.1691 \tWARNING \tt of last frame was 1.78ms (=1/561)\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python2\n",
     "# -*- coding: utf-8 -*-\n",
@@ -32,7 +48,7 @@
     "import sys  # to get file system encoding\n",
     "\n",
     "# Ensure that relative paths start from the same directory as this script\n",
-    "_thisDir = os.path.dirname(os.path.abspath(__file__)).decode(sys.getfilesystemencoding())\n",
+    "_thisDir = os.path.dirname(os.path.abspath(\"__file__\")).decode(sys.getfilesystemencoding())\n",
     "os.chdir(_thisDir)\n",
     "\n",
     "# Store info about the experiment session\n",
@@ -63,7 +79,7 @@
     "\n",
     "# Setup the Window\n",
     "win = visual.Window(\n",
-    "    size=(1366, 768), fullscr=True, screen=0,\n",
+    "    size=(1368, 768), fullscr=False, screen=0,\n",
     "    allowGUI=True, allowStencil=False,\n",
     "    monitor='testMonitor', color=[0,0,0], colorSpace='rgb',\n",
     "    blendMode='avg', useFBO=True)\n",
