--- a/teste_experiment2.ipynb
+++ b/teste_experiment2.ipynb
@@ -2,28 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "329.1622 \tWARNING \tt of last frame was 2.45ms (=1/408)\n",
-      "329.1691 \tWARNING \tt of last frame was 1.78ms (=1/561)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%run",	
     "#!/usr/bin/env python2\n",
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
