--- a/teste_experiment2.ipynb
+++ b/teste_experiment2.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "%run",	
+    "%run\n",
     "#!/usr/bin/env python2\n",
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
