--- a/pilot_experiment_verbal_attributes_and_orchestral_music.ipynb
+++ b/pilot_experiment_verbal_attributes_and_orchestral_music.ipynb
@@ -60,13 +60,16 @@
     "os.chdir(_thisDir)\n",
     "\n",
     "# Store info about the experiment session\n",
-    "expName = 'teste_experiment'  # from the Builder filename that created this script\n",
+    "expName = 'teste_experiment-SAM'  # from the Builder filename that created this script\n",
     "expInfo = {u'gender': u'', u'age': u'', u'session': u'001', u'participant': u'', u'pro_experience': u''}\n",
-    "dlg = gui.DlgFromDict(dictionary=expInfo, title=expName)\n",
+    "dlg = gui.DlgFromDict(dictionary=expInfo, title=expName, \n",
+    "    tip={'gender': 'please, put M for Male or F for Female','age':'Please, fill it with your age in years', 'participant':'Please, if you feel confortable fill it with your initials',\n",
+    "        'pro_experience':'Please, fill it with your years in music professional experience'})\n",
     "if dlg.OK == False:\n",
     "    core.quit()  # user pressed cancel\n",
     "expInfo['date'] = data.getDateStr()  # add a simple timestamp\n",
     "expInfo['expName'] = expName\n",
+    "\n",
     "\n",
     "# Data file name stem = absolute path + name; later add .psyexp, .csv, .log, etc\n",
     "filename = _thisDir + os.sep + u'data/%s_%s_%s' % (expInfo['participant'], expName, expInfo['date'])\n",
