--- a/pilot_experiment_verbal_attributes_and_orchestral_music.ipynb
+++ b/pilot_experiment_verbal_attributes_and_orchestral_music.ipynb
@@ -2,41 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/openpyxl/worksheet/worksheet.py:303: UserWarning: Using a coordinate with ws.cell is deprecated. Use ws[coordinate] instead\n",
-      "  warn(\"Using a coordinate with ws.cell is deprecated. Use ws[coordinate] instead\")\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/core/interactiveshell.py:2889: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python2\n",
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
     "This experiment was created using PsychoPy2 Experiment Builder (v1.85.1),\n",
-    "    on Thu 01 Jun 2017 08:24:18 PM BRT\n",
+    "    on Fri 02 Jun 2017 12:08:00 PM BRT\n",
     "If you publish work using this script please cite the PsychoPy publications:\n",
     "    Peirce, JW (2007) PsychoPy - Psychophysics software in Python.\n",
     "        Journal of Neuroscience Methods, 162(1-2), 8-13.\n",
@@ -70,7 +46,6 @@
     "expInfo['date'] = data.getDateStr()  # add a simple timestamp\n",
     "expInfo['expName'] = expName\n",
     "\n",
-    "\n",
     "# Data file name stem = absolute path + name; later add .psyexp, .csv, .log, etc\n",
     "filename = _thisDir + os.sep + u'data/%s_%s_%s' % (expInfo['participant'], expName, expInfo['date'])\n",
     "\n",
@@ -80,7 +55,7 @@
     "    originPath=None,\n",
     "    savePickle=True, saveWideText=True,\n",
     "    dataFileName=filename)\n",
-    "#    save a log file for detail verbose info\n",
+    "# save a log file for detail verbose info\n",
     "logFile = logging.LogFile(filename+'.log', level=logging.EXP)\n",
     "logging.console.setLevel(logging.WARNING)  # this outputs to the screen, not a file\n",
     "\n",
@@ -90,7 +65,7 @@
     "\n",
     "# Setup the Window\n",
     "win = visual.Window(\n",
-    "    size=(1366, 768), fullscr=True, screen=0,\n",
+    "    size=(1366, 768), fullscr=False, screen=0,\n",
     "    allowGUI=True, allowStencil=False,\n",
     "    monitor='testMonitor', color=[0,0,0], colorSpace='rgb',\n",
     "    blendMode='avg', useFBO=True)\n",
@@ -294,14 +269,20 @@
     "    color=[1.000,-1.000,-1.000], colorSpace='rgb', opacity=1,\n",
     "    depth=-16.0);\n",
     "\n",
+    "listening_count = visual.TextStim(win=win, name='listening_count',\n",
+    "    text='default text',\n",
+    "    font=u'Arial',\n",
+    "    pos=(0.91, 0.91), height=0.075, wrapWidth=None, ori=0, \n",
+    "    color=u'white', colorSpace='rgb', opacity=1,\n",
+    "    depth=-18.0);\n",
     "\n",
     "# Initialize components for Routine \"thanks\"\n",
     "thanksClock = core.Clock()\n",
     "text_thanks = visual.TextStim(win=win, name='text_thanks',\n",
-    "    text='Thanks, done!\\n\\nAny question can be sent to ieys [at] ime . usp . br and the instructor will reply ASAP.\\nThank you very much for participating.\\n\\n',\n",
-    "    font='Arial',\n",
+    "    text=u'Thanks, done!\\n\\nAny questions can be sent to ieys [at] ime . usp . br and and we will you reply ASAP.\\nThank you very much for participating.\\n\\n',\n",
+    "    font=u'Arial',\n",
     "    pos=(0, 0), height=0.1, wrapWidth=None, ori=0, \n",
-    "    color='white', colorSpace='rgb', opacity=1,\n",
+    "    color=u'white', colorSpace='rgb', opacity=1,\n",
     "    depth=0.0);\n",
     "\n",
     "# Create some handy timers\n",
@@ -702,7 +683,7 @@
     "rating_13.reset()\n",
     "rating_14.reset()\n",
     "key_resp_7 = event.BuilderKeyResponse()\n",
-    "p_sound = sound.Sound(u'/home/ieysimurra/Documents/psychopy_backup/pilot/sounds/exposure.wav', secs=5.0) \n",
+    "p_sound = sound.Sound() \n",
     "# keep track of which components have finished\n",
     "exposureComponents = [exposure_sound, exposure_text, rating_2, rating_3, rating_4, rating_5, rating_6, rating_7, rating_8, rating_9, rating_10, rating_11, rating_12, rating_13, rating_14, exposure_text2, key_resp_7, exposure_text3]\n",
     "for thisComponent in exposureComponents:\n",
@@ -977,9 +958,10 @@
     "    listening_thick_thin.reset()\n",
     "    listening_scattered_compact.reset()\n",
     "    key_resp_9 = event.BuilderKeyResponse()\n",
-    "    p_sound = listening_sound.play() \n",
+    "    p_sound = sound.Sound() \n",
+    "    listening_count.setText([(listening_trials.thisN+1), 33] )\n",
     "    # keep track of which components have finished\n",
-    "    listening_expComponents = [listening_sound, listening_hard_soft, listening_colorless_Colorful, listening_dull_dharp, listening_heavy_lightweight, listening_complex_simple, listening_cold_warm, listening_dim_bright, listening_mixed_pure, listening_strong_weak, listening_full_empty, listening_rough_smooth, listening_thick_thin, listening_scattered_compact, listening_text1, key_resp_9, listening_text2]\n",
+    "    listening_expComponents = [listening_sound, listening_hard_soft, listening_colorless_Colorful, listening_dull_dharp, listening_heavy_lightweight, listening_complex_simple, listening_cold_warm, listening_dim_bright, listening_mixed_pure, listening_strong_weak, listening_full_empty, listening_rough_smooth, listening_thick_thin, listening_scattered_compact, listening_text1, key_resp_9, listening_text2, listening_count]\n",
     "    for thisComponent in listening_expComponents:\n",
     "        if hasattr(thisComponent, 'status'):\n",
     "            thisComponent.status = NOT_STARTED\n",
@@ -1109,6 +1091,13 @@
     "        response = event.getKeys(keyList=['p'])\n",
     "        if 'p' in response:\n",
     "            p_sound.play()\n",
+    "        \n",
+    "        # *listening_count* updates\n",
+    "        if t >= 0.0 and listening_count.status == NOT_STARTED:\n",
+    "            # keep track of start time/frame for later\n",
+    "            listening_count.tStart = t\n",
+    "            listening_count.frameNStart = frameN  # exact frame index\n",
+    "            listening_count.setAutoDraw(True)\n",
     "        \n",
     "        # check if all components have finished\n",
     "        if not continueRoutine:  # a component has requested a forced-end of Routine\n",
