--- a/pilot_experiment_verbal_attributes_and_orchestral_music_WITH_SAM.ipynb
+++ b/pilot_experiment_verbal_attributes_and_orchestral_music_WITH_SAM.ipynb
@@ -12,7 +12,7 @@
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
     "This experiment was created using PsychoPy2 Experiment Builder (v1.85.1),\n",
-    "    on Thu 01 Jun 2017 09:00:50 PM BRT\n",
+    "    on Fri 02 Jun 2017 11:59:43 AM BRT\n",
     "If you publish work using this script please cite the PsychoPy publications:\n",
     "    Peirce, JW (2007) PsychoPy - Psychophysics software in Python.\n",
     "        Journal of Neuroscience Methods, 162(1-2), 8-13.\n",
@@ -65,7 +65,7 @@
     "\n",
     "# Setup the Window\n",
     "win = visual.Window(\n",
-    "    size=(1366, 768), fullscr=True, screen=0,\n",
+    "    size=(1366, 768), fullscr=False, screen=0,\n",
     "    allowGUI=True, allowStencil=False,\n",
     "    monitor='testMonitor', color=[0,0,0], colorSpace='rgb',\n",
     "    blendMode='avg', useFBO=True)\n",
@@ -377,15 +377,15 @@
     "rating_valence = visual.RatingScale(win=win, name='rating_valence', marker='triangle', size=1.25, pos=[0.5, -0.5], low=1, high=5, labels=['Sad', 'Cheerful'], scale='')\n",
     "listening_count = visual.TextStim(win=win, name='listening_count',\n",
     "    text='default text',\n",
-    "    font='Arial',\n",
+    "    font=u'Arial',\n",
     "    pos=(0.91, 0.91), height=0.075, wrapWidth=None, ori=0, \n",
-    "    color='white', colorSpace='rgb', opacity=1,\n",
+    "    color=u'white', colorSpace='rgb', opacity=1,\n",
     "    depth=-20.0);\n",
     "\n",
     "# Initialize components for Routine \"thanks\"\n",
     "thanksClock = core.Clock()\n",
     "text_thanks = visual.TextStim(win=win, name='text_thanks',\n",
-    "    text='Thanks, done!\\n\\nAny question can be sent to ieys [at] ime . usp . br and the instructor will reply ASAP.\\nThank you very much for participating.\\n\\n',\n",
+    "    text='Thanks, done!\\n\\nAny question can be sent to ieys [at] ime . usp . br and we will reply you ASAP.\\nThank you very much for participating.\\n\\n',\n",
     "    font='Arial',\n",
     "    pos=(0, 0), height=0.1, wrapWidth=None, ori=0, \n",
     "    color='white', colorSpace='rgb', opacity=1,\n",
@@ -1047,9 +1047,10 @@
     "    listening_texture.reset()\n",
     "    listening_brightness.reset()\n",
     "    key_resp_9 = event.BuilderKeyResponse()\n",
-    "    p_sound = listening_sound.play() \n",
+    "    p_sound = sound.Sound(u'/home/ieysimurra/Documents/psychopy_backup/pilot/sounds2.csv', secs=5.0) \n",
     "    rating_arousal.reset()\n",
     "    rating_valence.reset()\n",
+    "    listening_count.setText([(listening_trials.thisN+1), 33] )\n",
     "    # keep track of which components have finished\n",
     "    listening_expComponents = [listening_sound, listening_density, listening_texture, listening_brightness, listening_text1, key_resp_9, listening_text2, listening_arousal5, listening_arousal4, listening_arousal3, listening_arousal2, listening_arousal1, rating_arousal, listening_valence5, listening_valence4, listening_valence3, listening_valence2, listening_valence1, rating_valence, listening_count]\n",
     "    for thisComponent in listening_expComponents:\n",
@@ -1210,8 +1211,6 @@
     "            listening_count.tStart = t\n",
     "            listening_count.frameNStart = frameN  # exact frame index\n",
     "            listening_count.setAutoDraw(True)\n",
-    "        if listening_count.status == STARTED:  # only update if drawing\n",
-    "            listening_count.setText(\"%i/33\" % (listening_trials.thisRepN) , log=False)\n",
     "        \n",
     "        # check if all components have finished\n",
     "        if not continueRoutine:  # a component has requested a forced-end of Routine\n",
